Fix: Clipped Tab - Letters cleary padding

--- a/src/padding/_index.scss
+++ b/src/padding/_index.scss
@@ -14,9 +14,6 @@
   }
 }
 :root {
-  /* Tab Bar */
-  --inline-tab-padding: 6px !important; /* Original: 8px */
-
   /* Panel */
   --arrowpanel-menuicon-padding: 8px;
   --arrowpanel-menuitem-margin: 0 var(--arrowpanel-menuicon-padding) !important; /* Original: 0 8px */
@@ -36,7 +33,6 @@
   /* Tab Bar - Like Original */
   --proton-tab-block-margin: 4px !important; /* Original: 4px */
   --tab-block-margin: 4px !important; /* New version of --proton-tab-block-margin */
-  --inline-tab-padding: 8px !important; /* Original: 8px */
 
   /* Panel - Like Original */
   --arrowpanel-menuitem-padding: 8px !important; /* Original: 8px */
